scss/partials/_activity_card.scss
div.activity-card {
  width: 392px;
  float: left;
  background-color: white;
  border-radius: 6px;
  margin: 8px;
  position: relative;
  cursor: pointer;
  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);

  * {
    cursor: pointer;
  }

  &:nth-child(even) {
    margin-right: 0px;
  }

  &:nth-child(odd) {
    margin-left: 0px;
  }

  @include mobile() {
    width: 100%;
    margin: 12px 0px;
  }

  &:hover, &.dropdown-active {
    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
    @include big_web() {

      div.activity-card-footer {
        button.post-edit {
          opacity: 0.8;
        }

        div.activity-share {
          button.activity-share-bt {
            opacity: 1;
          }
        }
      }
    }
  }

  &.activity-card-placeholder {
    background-color: transparent;
    box-shadow: none;
    border: none;
  }

  &.empty-state {
    border: none;
    box-shadow: none;
    background-color: transparent;
    margin-top: 20px;
    flex: 1;
    text-align: center;
    width: 100%;

    div.empty-state-content {
      height: 160px;
      position: relative;
      top: 50%;
      margin-top: -80px;

      @include mobile() {
        display: none;
      }

      img {
        width: 168px;
        height: 120px;
      }

      div.activity-card-title {
        font-size: 14px;
        color: $carrot_light_gray;
        @include avenir_H();
        margin-top: 20px;
        text-align: center;

        button {
          color: $carrot_text_blue;
          padding: 0;
          margin: 0;

          &:hover, &:avtive, &:focus {
            border: none;
            outline: none;
            text-decoration: underline;
          }
        }
      }
    }
  }

  div.activity-card-breadcrumb {
    @include avenir_R();
    font-size: 14px;
    color: $oc_gray_7;
    padding: 24px;
    background-color: $carrot_light_gray_2;
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
  }

  div.activity-card-head {
    width: 100%;
    padding: 16px 24px;
    height: 65px;
    display: flex;
    background-color: $light_tan;
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;

    div.activity-card-head-author {
      padding-right: 20px;
      flex: 1;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;

      @include activity-author(32);
    }

    $right_max_width: 260;
    div.activity-card-head-right {
      white-space: nowrap;
      max-width: #{$right_max_width}px;

      @include new-tag();

      @include section-tag($right_max_width);

      div.section-tag {
        margin-right: 0px;
      }
    }
  }

  div.activity-card-shadow-container {
    border-bottom-left-radius: 6px;
    border-bottom-right-radius: 6px;

    @include mobile() {
      box-shadow: none;
    }
  }

  div.activity-card-content {
    width: 100%;
    padding: 24px 24px 0px;

    div.activity-card-headline {
      @include activity-title();
      @include avenir_H();
      font-size: 18px;
      color: $deep_navy;
      text-overflow: ellipsis;
      width: 100%;
      overflow: hidden;
      white-space: nowrap;
      max-height: 31px;
      line-height: 20px;

      @include mobile() {
        margin-top: 16px;
      }
    }

    @include activity-media-preview();

    $line_height: 18;
    $body_height: $line_height*3;
    div.activity-card-body {
      margin-top: 10px;
      @include activity-body(14, $line_height, $line_height);
      @include avenir_R();
      color: $deep_navy;
      line-height: #{$line_height}px;
      display: block;
      max-height: #{$body_height}px;
      overflow: hidden;

      h2 {
        line-height: #{$line_height}px;
        @include avenir_R();
        font-size: 14px;
        font-weight: normal;
      }

      & > *:not(:last-child) {
        margin: #{$line_height}px 0px;
      }

      & > *:last-child {
        margin: #{$line_height}px 0px 0px;
      }

      & > *:first-child {
        margin-top: 0px;
      }

      &.has-body {
        height: #{$body_height}px;
      }

      &.has-media-preview {
        width: calc(100% - #{$line_height * 3}px - 16px);
        margin-right: 16px;
        float: left;
      }

      .carrot-no-preview {
        display: none;
      }

      a:not(.read-more):hover {
        text-decoration: none !important;
      }

      img:not(.emojione){
        display: none;
      }

      b, strong {
        line-height: #{$line_height}px;
        @include avenir_R();
        font-size: 14px;
        font-weight: normal;
      }

      // // Uncomment this to programmatically add the read full update at the end of the last body tag
      // div:last-child, p:last-child {
      //   &:after {
      //     content: "Read Full Update";
      //     @include activity-body;
      //     color: $carrot_text_blue;
      //     cursor: pointer;
      //     margin-left: 5px;
      //   }
      // }

      // &:empty {
      //   &:after {
      //     content: "Read Full Update";
      //     @include activity-body;
      //     color: $carrot_text_blue;
      //     cursor: pointer;
      //   }
      // }
    }
  }

  div.activity-card-attachments {
    margin-top: 14px;
    @include avenir_M();
    font-size: 12px;
    line-height: 16px;
    color: $ui_grey;
  }

  div.activity-card-footer {
    width: 100%;
    padding: 14px 24px 24px;
    border-bottom-left-radius: 6px;
    border-bottom-right-radius: 6px;

    @include mobile() {
      padding: 24px 32px 32px;
    }

    div.activity-card-footer-divider-line {
      width: 100%;
      height: 1px;
      background-color: #ECECEC;
      margin-bottom: 16px;

      @include mobile() {
        display: none;
      }
    }

    div.reactions {
      float: left;

      @include mobile() {
        float: unset;
      }
    }

    div.is-comments {
      float: left;
      margin-left: 16px;

      @include mobile() {
        float: unset;
      }
    }
  }
}
/* linkAnimation for card and modal links */
@include keyframe(linkAnimation){
  0% {
    background-position: right bottom;
    background-size: 100% .1rem;
  }

  50% {
    background-position: right bottom;
    background-size: 0 .1rem;
  }

  51% {
    background-position: left bottom;
    background-size: 0 .1rem;
  }

  100% {
    background-position: left bottom;
    background-size: 100% .1rem;
  }
}

