Make sure the attachment line has the same height even if there are no attachments to avoid losing alignment with the parallel card.

--- a/scss/partials/_activity_card.scss
+++ b/scss/partials/_activity_card.scss
@@ -258,6 +258,7 @@ div.activity-card {
     @include avenir_M();
     font-size: 12px;
     line-height: 16px;
+    height: 16px;
     color: $ui_grey;
   }
 
